[graal] add new test building system